--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
     align-items: center;
     gap:2rem;
     margin: 0 auto;
-    font-family:'Courier New', Courier, monospace;
+    font-family:Georgia, 'Times New Roman', Times, serif;
     background-color: #212830;
     color: #ffffff;
 }
